--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
